src/test/deca/syntax/invalid/parser/manque_op_plus.deca
// Il manque clairement des opérandes

// Date: 20.01.2022

{
    float a = 2;
    float b;
    b = + a ;
    //a = 4 *;
    //a = / 2;
    //a = 2 %;
    //a = 2 -;

}